[tool.poetry]
name = "chart-server"
version = "0.1.0"
description = ""
authors = ["Cuzz <rygus9@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
uvicorn = "^0.24.0.post1"
pandas = "^2.1.3"
numpy = "^1.26.2"
mock = "^5.1.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
